syntax = "proto3";

import "google/protobuf/wrappers.proto";

package bookstore;

option go_package = "./bookstore";

service BookManagement {
    rpc AddBook(Book) returns (google.protobuf.StringValue);
    rpc DeleteBook(google.protobuf.StringValue) returns (Book);
    rpc GetBook(google.protobuf.StringValue) returns (Book);
}

message Book {
    string id = 1;
    string title = 2;
    repeated string authors = 3;
}
